--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "note-taker",
+  "name": "express-note-taker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Jon Phoenix",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.16.4"
   }
